--- a/src/components/PokemonSpriteEvolution.css
+++ b/src/components/PokemonSpriteEvolution.css
@@ -4,9 +4,10 @@
     align-items: center;
     border: 2px solid black;
     padding: 10px;
-    background-color: white;
+    background-color: #fad636;
     box-shadow: 5px 10px black;
     margin: 20px;
+    border-radius: 20px;
 }
 
 .sprite-evo {
